add Readme file + gulp

--- a/src/sass/_branch1.scss
+++ b/src/sass/_branch1.scss
@@ -2,3 +2,7 @@
     background-image: url(../img/f_top_img.png);
     height: 400px;
 }
+.f-top_please{
+    background-image: url(../img/f_top_img.png);
+    height: 400px;
+}
