--- a/src/sass/_font.scss
+++ b/src/sass/_font.scss
@@ -1,33 +1,5 @@
 @font-face {
-  font-family: 'Open Sans Regular';
-  src: url('../fonts/OpenSans.eot');
-  src: url('../fonts/OpenSans.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/OpenSans.woff') format('woff'),
-  url('../fonts/OpenSans.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Open Sans Italic';
-  src: url('../fonts/OpenSans-Italic.eot');
-  src: url('../fonts/OpenSans-Italic.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/OpenSans-Italic.woff') format('woff'),
-  url('../fonts/OpenSans-Italic.ttf') format('truetype');
-  font-weight: normal;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Open Sans Bold';
-  src: url('../fonts/OpenSans-Bold.eot');
-  src: url('../fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/OpenSans-Bold.woff') format('woff'),
-  url('../fonts/OpenSans-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Open Sans';
+  font-family: 'OpenSans-Semibold';
   src: url('../fonts/OpenSans-Semibold.eot');
   src: url('../fonts/OpenSans-Semibold.eot?#iefix') format('embedded-opentype'),
   url('../fonts/OpenSans-Semibold.woff') format('woff'),
@@ -35,17 +7,29 @@
   font-weight: 600;
   font-style: normal;
 }
+
 @font-face {
-  font-family: 'Source Sans Pro Bold';
-  src: url('../fonts/SourceSansPro-Bold.eot');
-  src: url('../fonts/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/SourceSansPro-Bold.woff') format('woff'),
-  url('../fonts/SourceSansPro-Bold.ttf') format('truetype');
-  font-weight: bold;
+  font-family: 'SourceSansPro-Semibold';
+  src: url('../fonts/SourceSansPro-Semibold.eot');
+  src: url('../fonts/SourceSansPro-Semibold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/SourceSansPro-Semibold.woff') format('woff'),
+  url('../fonts/SourceSansPro-Semibold.ttf') format('truetype');
+  font-weight: 600;
   font-style: normal;
 }
+
 @font-face {
-  font-family: 'Source Sans Pro Light';
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans.eot');
+  src: url('../fonts/OpenSans.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/OpenSans.woff') format('woff'),
+  url('../fonts/OpenSans.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SourceSansPro-Light';
   src: url('../fonts/SourceSansPro-Light.eot');
   src: url('../fonts/SourceSansPro-Light.eot?#iefix') format('embedded-opentype'),
   url('../fonts/SourceSansPro-Light.woff') format('woff'),
@@ -55,11 +39,71 @@
 }
 
 @font-face {
-  font-family: 'Source Sans Pro Regular';
+  font-family: 'Lato-Regular';
+  src: url('../fonts/Lato-Regular.eot');
+  src: url('../fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Lato-Regular.woff') format('woff'),
+  url('../fonts/Lato-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'OpenSans-Bold';
+  src: url('../fonts/OpenSans-Bold.eot');
+  src: url('../fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/OpenSans-Bold.woff') format('woff'),
+  url('../fonts/OpenSans-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'OpenSans-Light';
+  src: url('../fonts/OpenSans-Light.eot');
+  src: url('../fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/OpenSans-Light.woff') format('woff'),
+  url('../fonts/OpenSans-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SourceSansPro-Regular';
   src: url('../fonts/SourceSansPro-Regular.eot');
   src: url('../fonts/SourceSansPro-Regular.eot?#iefix') format('embedded-opentype'),
   url('../fonts/SourceSansPro-Regular.woff') format('woff'),
   url('../fonts/SourceSansPro-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'SourceSansPro-Bold';
+  src: url('../fonts/SourceSansPro-Bold.eot');
+  src: url('../fonts/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/SourceSansPro-Bold.woff') format('woff'),
+  url('../fonts/SourceSansPro-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'OpenSans-SemiboldItalic';
+  src: url('../fonts/OpenSans-SemiboldItalic.eot');
+  src: url('../fonts/OpenSans-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/OpenSans-SemiboldItalic.woff') format('woff'),
+  url('../fonts/OpenSans-SemiboldItalic.ttf') format('truetype');
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Lato-Italic';
+  src: url('../fonts/Lato-Italic.eot');
+  src: url('../fonts/Lato-Italic.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Lato-Italic.woff') format('woff'),
+  url('../fonts/Lato-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
 }
