--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,8 +1,7 @@
-
+@import "_var.scss";
 @import "_mixins.scss";
 @import "_start.scss";
 @import "_font.scss";
 @import "_helpers.scss";
 @import "_normalize.scss";
-@import "_branch1.scss";
 @import "_new.scss";
