--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -1,11 +1,55 @@
 <div class="main-footer">
-    <div class="container sorry">
-        <i class="facebook social-icon">
-            <svg class="" width="10" height="20">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use>
-            </svg>
-        </i>
+    <div class="wrap_respond">
+        <div class="container ">
+            <div class="main-footer__social">
+                <div class="social">
+                    <a href="#" class="facebook social__icon">
+                        <svg class="" width="18" height="20">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="twitter social__icon">
+                        <svg class="" width="21" height="18">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="rss social__icon">
+                        <svg class="" width="19" height="19">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#rss"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="google social__icon">
+                        <svg class="" width="18" height="17">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#google"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="in social__icon">
+                        <svg class="" width="20" height="18">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#in"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="skype social__icon">
+                        <svg class="" width="25" height="18">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#skype"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="vimeo social__icon">
+                        <svg class="" width="20" height="17">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#vimeo"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="t social__icon">
+                        <svg class="" width="17" height="18">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#t"></use>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <div class="main-footer__copy">
+                <div class="copy">
+                    <p>Kazi Erfan © All Rights Reserved </p>
+                </div>
+            </div>
+        </div>
     </div>
-
-
 </div>
