--- a/src/components/head/head.html
+++ b/src/components/head/head.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Bino</title>
+    <link rel="stylesheet" href="css/main.css"/>
 </head>
-<body>
-
-</body>
-</html>
