--- a/src/sass/_start.scss
+++ b/src/sass/_start.scss
@@ -1,9 +1,138 @@
-.social-icon{
-  display: inline-block;
-}
-.sorry{
-  background: url("../img/sorry.jpeg") no-repeat;
+.main-footer{
+  height: 90px;
+  background-color: #202020;
   width: 100%;
-  min-height: 600px;
+  box-sizing: border-box;
+  padding-top: 34px;
+  @include to(m){
+    text-align: center;
+    padding-top: 15px;
+  }
+  &__social{
+    float: left;
+    @include to(m){
+      float: none;
+      margin-bottom: 10px;
+    }
+
+  }
+  &__copy{
+    float: right;
+    @include to(m){
+      float: none;
+    }
+  }
+}
+.social{
+  font-size: 0;
+  &__icon{
+    display: inline-block;
+    fill:#999;
+    margin-right:8px;
+    vertical-align: middle;
+
+    transition: fill .5s;
+    &:hover{
+      @include to(d){
+        fill: #e74c3c;
+      }
+    }
+  }
+}
+.copy{
+  p{
+    opacity: 0.75;
+    color: #999;
+    font-family: Open Sans Regular, sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 24px;
+  }
+
+}
+.free-start{
+  background: url("../img/footer-bg.jpg") no-repeat;
   background-size: cover;
+  min-height: 480px;
+  position: relative;
+  padding-top: 150px;
+  box-sizing: border-box;
+  @include to(m){
+    padding-top: 80px;
+  }
+  &:after{
+    content: '';
+    opacity: 0.6;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+
+  }
+  &__container{
+    width: 842px;
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
+    @include to(t){
+      width: 100%;
+    }
+    @include to(m){
+      width: 100%;
+    }
+  }
+  &__content{
+    color: #fff;
+    font-family:$OpenSans;
+    margin-bottom: 70px;
+    @include to(m){
+      margin-bottom: 40px;
+    }
+    h4{
+      font-size: 36px;
+      font-weight: 400;
+      line-height: 38px;
+      span{
+        font-weight: 700;
+        @include to(m){
+          display: block;
+          margin-top: 20px;
+        }
+
+      }
+    }
+    p{
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 36px;
+    }
+  }
+
+}
+.btn{
+  display: inline-block;
+  height: 56px;
+  background-color: #e74c3c;
+  border-radius: 3px 2px 2px 3px;
+  box-shadow: 0 2px 4.8px 0.3px rgba(0, 0, 0, 0.25);
+  white-space: nowrap;
+  color: white;
+  font-family: $OpenSans;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 56px;
+  padding: 0 50px;
+  letter-spacing: 1px;
+  position: relative;
+  transition: letter-spacing .3s;
+  z-index: 2;
+  &:hover{
+    @include to(d){
+      letter-spacing: 1.5px;
+    }
+  }
 }
