--- a/src/sass/_helpers.scss
+++ b/src/sass/_helpers.scss
@@ -20,17 +20,19 @@
   position: relative;
   @include to(t){
     max-width: 100%;
-  }
-  @include to(m){
-    max-width: 100%;
-  }
-}
-
-.wrap_respond{
-  @include to(t){
     padding: 0 25px;
   }
   @include to(m){
+    max-width: 100%;
     padding: 0 20px;
   }
 }
+
+//.wrap_respond{
+//  @include to(t){
+//    padding: 0 25px;
+//  }
+//  @include to(m){
+//    padding: 0 20px;
+//  }
+//}
