--- a/src/sass/_start.scss
+++ b/src/sass/_start.scss
@@ -77,11 +77,13 @@
     margin: 0 auto;
     position: relative;
     z-index: 2;
+    box-sizing: border-box;
     @include to(t){
       width: 100%;
     }
     @include to(m){
       width: 100%;
+      padding: 0 20px;
     }
   }
   &__content{
