--- a/src/sass/_var.scss
+++ b/src/sass/_var.scss
@@ -1,4 +1,4 @@
-$OpenSans:'OpenSansRegular', serif;
+$OpenSans:'Open Sans', sans-serif;;
 $OpenSans_Italic:'Open Sans Italic', serif;
 $OpenSans_Bold:'Open Sans Bold', serif;
 $SourceSans_Bold:'Source Sans Pro Bold', serif;
