--- a/src/sass/_var.scss
+++ b/src/sass/_var.scss
@@ -1,6 +1,2 @@
 $OpenSans:'Open Sans', sans-serif;;
-$OpenSans_Italic:'Open Sans Italic', serif;
-$OpenSans_Bold:'Open Sans Bold', serif;
-$SourceSans_Bold:'Source Sans Pro Bold', serif;
-$SourceSans_light:'Source Sans Pro Light', serif;
-$SourceSans_Regular:'Source Sans Pro Regular', serif;
+$SourceSans_Regular: 'Source Sans Pro', sans-serif;;
