--- a/src/components/head/head.html
+++ b/src/components/head/head.html
@@ -3,5 +3,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Bino</title>
     <link rel="stylesheet" href="css/main.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
 </head>
